Changed labels of Fuel cost and replaced for Diesel cost

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <input type="number" id="mpg" placeholder="Enter average MPG" required>
                 </div>
                 <div class="input-group">
-                    <label for="fuelCost">Fuel Cost per Gallon ($):</label>
-                    <input type="number" id="fuelCost" placeholder="Enter fuel cost per gallon" required>
+                    <label for="fuelCost">Diesel Cost per Gallon ($):</label>
+                    <input type="number" id="fuelCost" placeholder="Enter Avg Diesel Cost " required>
                 </div>
                 <div class="input-group">
                     <label for="dispatchPercent">Dispatch Percentage (%):</label>
